tests/lean/moduleOf.lean.expected.out
(some Init.Prelude)
(some Lean.CoreM)
(some Lean.Elab.Term)
(some Std.Data.HashMap)
none
none
moduleOf.lean:16:0: error: unknown constant 'foo'
